fix: tests, Criterion SumType